@@ -282,7 +282,7 @@
         </ul>
       </li>
 
-      <li><b><a name='tomcat' href="http://jakarta.apache.org/builds/jakarta-tomcat-4.0/release/v4.1.24/bin/">Install Apache Tomcat 4.1.24 or higher</a></b> (the webserver and JSP container), this is
+      <li><b><a name='tomcat' href="http://jakarta.apache.org/tomcat/index.html">Install Apache Tomcat 4.1.24 or higher</a></b> (the webserver and JSP container), this is
         found on the cd in apps/tomcat.  Choose the LE version.
         <ul>
           <li>When you start the installer it will tell you where it found
