@@ -1,4 +1,13 @@
-2004-05-11  Jon Schewe  <>
+2004-05-12  U-TOSHIBA-USER\jpschewe  <jpschewe@mtu.net>
+
+	* src/fll/Queries.java (computeTotalScore): Modified to catch
+	SQLExceptions and to return Integer.MIN_VALUE in this case,
+	signifing that the row is to be ignored (914631).
+
+	* docs/index.html: Change link to point to the top level tomcat
+	project and allow the users to find the actual builds (871671).
+
+2004-05-11  Jon Schewe  <jpschewe@mtu.net>
 
 	* src/fll/xml/GenerateDB.java (generateDB): factored out the sql
 	datatype for tournaments to the top to make it easy to change the
